--- a/Spring/Photostagram/src/main/resources/application.properties
+++ b/Spring/Photostagram/src/main/resources/application.properties
@@ -37,7 +37,7 @@ spring.servlet.multipart.location=thumb/
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 
-
+# ignore test1
 
 
 
