--- a/Spring/Photostagram/build.gradle
+++ b/Spring/Photostagram/build.gradle
@@ -21,6 +21,7 @@ repositories {
 }
 
 dependencies {
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
