2023/03/24 api 설계 추가

--- a/Spring/Photostagram/build.gradle
+++ b/Spring/Photostagram/build.gradle
@@ -21,6 +21,7 @@ repositories {
 }
 
 dependencies {
+	compile "org.springframework.social:spring-social-facebook:2.0.3.RELEASE"
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	implementation 'org.webjars:sockjs-client:1.5.1'
 	implementation 'org.webjars:stomp-websocket:2.3.4'
